--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML 5 com CSS 3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam totam officiis non dolorem aut voluptate hic nisi assumenda debitis libero, placeat iure sequi itaque quas laborum at, earum suscipit! Dolor!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id enim repellat odit. Harum, fugit, obcaecati iure dicta enim sapiente aspernatur necessitatibus iste non tempora, hic libero ipsum blanditiis odio a!</p>
         </article>
     </main>
 </body>
